# catia-project-example

./: .gitignore  CMakeLists.txt  CMakePresets.json
Workspace_1/Framework_1_2/: CMakeLists.txt  instances.cmake
Workspace_1/Framework_1_2/Module_1_2_1_Static/: CMakeLists.txt
Workspace_1/Framework_1_2/Module_1_2_1_Static/LocalInterfaces/: ABA.h
Workspace_1/Framework_1_2/Module_1_2_1_Static/src/: ABA.cpp
Workspace_1/Framework_1_2/Module_1_2_2_None/: CMakeLists.txt
Workspace_1/Framework_1_2/Module_1_2_2_None/LocalInterfaces/: ABB.h
Workspace_1/Framework_1_2/Module_1_2_2_None/src/: ABB.cpp
Workspace_1/Framework_1_2/Module_1_2_3_Dynamic/: CMakeLists.txt
Workspace_1/Framework_1_2/Module_1_2_3_Dynamic/LocalInterfaces/: ABC.h
Workspace_1/Framework_1_2/Module_1_2_3_Dynamic/src/: ABC.cpp
Workspace_1/Framework_1_2/Module_1_2_4_None/: CMakeLists.txt
Workspace_1/Framework_1_2/Module_1_2_4_None/LocalInterfaces/: ABD.h
Workspace_1/Framework_1_2/Module_1_2_4_None/src/: ABD.cpp
Workspace_1/Framework_1_2/Module_1_2_5_Static_Protected/: CMakeLists.txt
Workspace_1/Framework_1_2/Module_1_2_5_Static_Protected/LocalInterfaces/: ABE.h
Workspace_1/Framework_1_2/Module_1_2_5_Static_Protected/src/: ABE.cpp
Workspace_1/Framework_1_2/Module_1_2_6_Dynamic_Protected/: CMakeLists.txt
Workspace_1/Framework_1_2/Module_1_2_6_Dynamic_Protected/LocalInterfaces/: ABF.h
Workspace_1/Framework_1_2/Module_1_2_6_Dynamic_Protected/src/: ABF.cpp
Workspace_1/Framework_1_2/PrivateInterfaces/: private_1_2.h
Workspace_1/Framework_1_2/ProtectedInterfaces/: protected_1_2.h
Workspace_1/Framework_1_2/PublicInterfaces/: public_1_2.h
Workspace_2/: CMakeLists.txt
Workspace_2/Framework_2_1/: CMakeLists.txt  instances.cmake
Workspace_2/Framework_2_1/Module_2_1_1_Static/: CMakeLists.txt
Workspace_2/Framework_2_1/Module_2_1_1_Static/LocalInterfaces/: BAA.h
Workspace_2/Framework_2_1/Module_2_1_1_Static/src/: BAA.cpp
Workspace_2/Framework_2_1/Module_2_1_2_None/: CMakeLists.txt
Workspace_2/Framework_2_1/Module_2_1_2_None/LocalInterfaces/: BAB.h
Workspace_2/Framework_2_1/Module_2_1_2_None/src/: BAB.cpp
Workspace_2/Framework_2_1/Module_2_1_3_Dynamic/: CMakeLists.txt
Workspace_2/Framework_2_1/Module_2_1_3_Dynamic/LocalInterfaces/: BAC.h
Workspace_2/Framework_2_1/Module_2_1_3_Dynamic/src/: BAC.cpp
Workspace_2/Framework_2_1/Module_2_1_4_None/: CMakeLists.txt
Workspace_2/Framework_2_1/Module_2_1_4_None/LocalInterfaces/: BAD.h
Workspace_2/Framework_2_1/Module_2_1_4_None/src/: BAD.cpp
Workspace_2/Framework_2_1/Module_2_1_5_Static_Protected/: CMakeLists.txt
Workspace_2/Framework_2_1/Module_2_1_5_Static_Protected/LocalInterfaces/: BAE.h
Workspace_2/Framework_2_1/Module_2_1_5_Static_Protected/src/: BAE.cpp
Workspace_2/Framework_2_1/Module_2_1_6_Dynamic_Protected/: CMakeLists.txt
Workspace_2/Framework_2_1/Module_2_1_6_Dynamic_Protected/LocalInterfaces/: BAF.h
Workspace_2/Framework_2_1/Module_2_1_6_Dynamic_Protected/src/: BAF.cpp
Workspace_2/Framework_2_1/PrivateInterfaces/: private_2_1.h
Workspace_2/Framework_2_1/ProtectedInterfaces/: protected_2_1.h
Workspace_2/Framework_2_1/PublicInterfaces/: public_2_1.h
Workspace_2/Framework_2_2/: CMakeLists.txt  instances.cmake
Workspace_2/Framework_2_2/Module_2_2_1_Static/: CMakeLists.txt
Workspace_2/Framework_2_2/Module_2_2_1_Static/LocalInterfaces/: BBA.h
Workspace_2/Framework_2_2/Module_2_2_1_Static/src/: BBA.cpp
Workspace_2/Framework_2_2/Module_2_2_2_None/: CMakeLists.txt
Workspace_2/Framework_2_2/Module_2_2_2_None/LocalInterfaces/: BBB.h
Workspace_2/Framework_2_2/Module_2_2_2_None/src/: BBB.cpp
Workspace_2/Framework_2_2/Module_2_2_3_Dynamic/: CMakeLists.txt
Workspace_2/Framework_2_2/Module_2_2_3_Dynamic/LocalInterfaces/: BBC.h
Workspace_2/Framework_2_2/Module_2_2_3_Dynamic/src/: BBC.cpp
Workspace_2/Framework_2_2/Module_2_2_4_None/: CMakeLists.txt
Workspace_2/Framework_2_2/Module_2_2_4_None/LocalInterfaces/: BBD.h
Workspace_2/Framework_2_2/Module_2_2_4_None/src/: BBD.cpp
Workspace_2/Framework_2_2/Module_2_2_5_Static_Protected/: CMakeLists.txt
Workspace_2/Framework_2_2/Module_2_2_5_Static_Protected/LocalInterfaces/: BBE.h
Workspace_2/Framework_2_2/Module_2_2_5_Static_Protected/src/: BBE.cpp
Workspace_2/Framework_2_2/Module_2_2_6_Dynamic_Protected/: CMakeLists.txt
Workspace_2/Framework_2_2/Module_2_2_6_Dynamic_Protected/LocalInterfaces/: BBF.h
Workspace_2/Framework_2_2/Module_2_2_6_Dynamic_Protected/src/: BBF.cpp
Workspace_2/Framework_2_2/PrivateInterfaces/: private_2_2.h
Workspace_2/Framework_2_2/ProtectedInterfaces/: protected_2_2.h
Workspace_2/Framework_2_2/PublicInterfaces/: public_2_2.h
Workspace_2/Framework_2_3_Test/: CMakeLists.txt  instances.cmake
Workspace_2/Framework_2_3_Test/Module_2_3_1_Test/: CMakeLists.txt
Workspace_2/Framework_2_3_Test/Module_2_3_1_Test/src/: main.cpp
Workspace_2/Framework_2_4_Imported/: CMakeLists.txt  imported.cmake  instances.cmake
Workspace_2/Framework_2_4_Imported/Module_2_4_1_Dynamic/: CMakeLists.txt
Workspace_2/Framework_2_4_Imported/Module_2_4_1_Dynamic/LocalInterfaces/: BDA.h
Workspace_2/Framework_2_4_Imported/Module_2_4_1_Dynamic/src/: BDA.cpp
Workspace_2/Framework_2_4_Imported/Runtime/inc/: ZwDCApi.h  ZwDCBaseType.h  ZwDCColor.h  ZwDCEmbedderBase.h  ZwDCExport.h  ZwDCLanguage.h  ZwDCMacro.h  ZwDCNamespace.h  ZwDCPRCSetting.h  ZwDCPlatform.h
Workspace_2/Framework_2_5_Mutual/: CMakeLists.txt  instances.cmake
Workspace_2/Framework_2_5_Mutual/Module_2_5_1_Dynamic/: CMakeLists.txt
Workspace_2/Framework_2_5_Mutual/Module_2_5_1_Dynamic/LocalInterfaces/: BEA.h
Workspace_2/Framework_2_5_Mutual/Module_2_5_1_Dynamic/src/: BEA.cpp
Workspace_2/Framework_2_5_Mutual/Module_2_5_2_Dynamic/: CMakeLists.txt
Workspace_2/Framework_2_5_Mutual/Module_2_5_2_Dynamic/LocalInterfaces/: BEB.h
Workspace_2/Framework_2_5_Mutual/Module_2_5_2_Dynamic/src/: BEB.cpp
Workspace_2/Framework_2_5_Mutual/Module_2_5_3_Dynamic/: CMakeLists.txt
Workspace_2/Framework_2_5_Mutual/Module_2_5_3_Dynamic/src/: BEC.cpp
docs/: CMakeLists.txt  Doxyfile.in
(+113 files in other folders)
